--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Super Cool Chat",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/lab/bin/lab -c"
   },
   "keywords": [
     "Chat",
@@ -15,11 +15,8 @@
   "author": "Dmitry Skrinnik",
   "license": "MIT",
   "dependencies": {
-    "catbox-mongodb": "^1.0.4",
     "hapi": "^6.0.2",
     "jade": "^1.3.1",
-    "joi": "^4.6.1",
-    "lout": "^5.0.1",
-    "memorystream": "^0.2.0"
+    "lab": "^3.2.1"
   }
 }
