--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
   ],
   "author": "Dmitry Skrinnik",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/dmskr/qchat.git"
+  },
   "dependencies": {
+    "bower": "^1.3.7",
     "hapi": "^6.0.2",
     "jade": "^1.3.1",
     "lab": "^3.2.1"
