--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,6 @@
   ],
   "dependencies": {
     "angular": "~1.2.19",
-    "bootstrap": "~3.2.0",
-    "angular-ui-bootstrap": "~0.11.0"
+    "bootstrap": "~3.2.0"
   }
 }
