--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bower": "^1.3.7",
     "hapi": "^6.0.2",
-    "lab": "^3.2.1"
+    "lab": "^3.2.1",
+    "sugar": "^1.4.1"
   }
 }
